# nodebb-python

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: __init__.py  basic_usage.py  openai_integration.py  simple_example.py
nodebb/: __init__.py  client.py  config.py  exceptions.py  tools.py  utils.py
nodebb/api/: __init__.py  auth.py  chat.py  read.py  upload.py  write.py
tests/: __init__.py  test_integration.py  test_read_api.py  test_write_api.py
